--- a/changed/templates/changed/replies.html
+++ b/changed/templates/changed/replies.html
@@ -4,7 +4,13 @@
 
 
     <body>
-
+    <!--
+        -- REFERENCE
+        -- Title: Bootstrap Card
+        -- Bootstrap Version: Bootstrap 4.0
+        -- URL: https://getbootstrap.com/docs/4.0/components/card/
+        -- Bootstrap License: MIT
+    -->
         <div class="container">
             <div class="row justify-content-md-center">
                 <div class="card" style="width:70vw; margin:1vh">
