--- a/changed/templates/changed/comments.html
+++ b/changed/templates/changed/comments.html
@@ -14,6 +14,13 @@
         {% for comment in business_info %}
         <div class="container">
             <div class="row justify-content-md-center">
+                <!--
+                  -- REFERENCE
+                  -- Title: Bootstrap List Group
+                  -- Software Version: Bootstrap 4.0
+                  -- URL: https://getbootstrap.com/docs/4.0/components/list-group/
+                  -- Bootstrap License: MIT
+                -->
                 <div class="list-group" style="width:70vw">
                     <a href="{% url 'changed:replies' id=comment.id %}" class="list-group-item list-group-item-action"
                         aria-current="false">
