--- a/changed/templates/changed/profile.html
+++ b/changed/templates/changed/profile.html
@@ -14,6 +14,13 @@
             <div class="text-center" style="margin:2vh">
                 <h3>{{user.username}}'s Reviews</h3>
             </div>
+            <!--
+               -- REFERENCE
+               -- Title: Bootstrap Card
+               -- Bootstrap Version: Bootstrap 4.0
+               -- URL: https://getbootstrap.com/docs/4.0/components/card/
+               -- Bootstrap License: MIT
+            -->
             {% for review in user_reviews %}
             <div class="card mx-auto row justify-content-md-center" style="margin:1vh; width: 50vw">
                 <h4 class="card-header">{{review.business.business_name}}</h4>
